wiki: Fix link visibility on 'alert' sections

--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,6 @@ li {
   }
 
 }
+
+.alert.alert-warning a {
+  color: #000; }
